--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Template 02 Kasper</title>
 
-        <link rel="stylesheet" href="/Css/all.min.css">
-        <link rel="stylesheet" href="/Css/Norm.css">
-        <link rel="stylesheet" href="/Css/Kasper.css">
+        <link rel="stylesheet" href="Css/all.min.css">
+        <link rel="stylesheet" href="Css/Norm.css">
+        <link rel="stylesheet" href="Css/Kasper.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
@@ -21,7 +21,7 @@
         <header>
             <div class="container">
                 <a href="#Home" class="logo">
-                    <img src="/img/png_20230101_013331_0000-removebg-preview.png" alt="Logo">
+                    <img src="img/png_20230101_013331_0000-removebg-preview.png" alt="Logo">
                 </a>
                 <nav>
                     <i class="fa-solid fa-bars"></i>
@@ -136,56 +136,56 @@
             </div>
             <div class="sec">
                 <div class="sec-box">
-                    <img src="/img/sec-img/shuffle-01.jpg" alt="">
+                    <img src="img/sec-img/shuffle-01.jpg" alt="">
                     <div class="sec-caption">
                         <p>Awesome Image</p>
                         <h3>Photography</h3>
                     </div>
                 </div>
                 <div class="sec-box">
-                    <img src="/img/sec-img/shuffle-02.jpg" alt="">
+                    <img src="img/sec-img/shuffle-02.jpg" alt="">
                     <div class="sec-caption">
                         <p>Awesome Image</p>
                         <h3>Photography</h3>
                     </div>
                 </div>
                 <div class="sec-box">
-                    <img src="/img/sec-img/shuffle-03.jpg" alt="">
+                    <img src="img/sec-img/shuffle-03.jpg" alt="">
                     <div class="sec-caption">
                         <p>Awesome Image</p>
                         <h3>Photography</h3>
                     </div>
                 </div>
                 <div class="sec-box">
-                    <img src="/img/sec-img/shuffle-04.jpg" alt="">
+                    <img src="img/sec-img/shuffle-04.jpg" alt="">
                     <div class="sec-caption">
                         <p>Awesome Image</p>
                         <h3>Photography</h3>
                     </div>
                 </div>
                 <div class="sec-box">
-                    <img src="/img/sec-img/shuffle-05.jpg" alt="">
+                    <img src="img/sec-img/shuffle-05.jpg" alt="">
                     <div class="sec-caption">
                         <p>Awesome Image</p>
                         <h3>Photography</h3>
                     </div>
                 </div>
                 <div class="sec-box">
-                    <img src="/img/sec-img/shuffle-06.jpg" alt="">
+                    <img src="img/sec-img/shuffle-06.jpg" alt="">
                     <div class="sec-caption">
                         <p>Awesome Image</p>
                         <h3>Photography</h3>
                     </div>
                 </div>
                 <div class="sec-box">
-                    <img src="/img/sec-img/shuffle-07.jpg" alt="">
+                    <img src="img/sec-img/shuffle-07.jpg" alt="">
                     <div class="sec-caption">
                         <p>Awesome Image</p>
                         <h3>Photography</h3>
                     </div>
                 </div>
                 <div class="sec-box">
-                    <img src="/img/sec-img/shuffle-08.jpg" alt="">
+                    <img src="img/sec-img/shuffle-08.jpg" alt="">
                     <div class="sec-caption">
                         <p>Awesome Image</p>
                         <h3>Photography</h3>
@@ -198,7 +198,7 @@
             <div class="video">
                 <div class="overlay"></div>
                 <video autoplay muted loop>
-                    <source src="/img/video.mp4" type="video/mp4">
+                    <source src="img/video.mp4" type="video/mp4">
                 </video>
                 <div class="caption">
                     <h3>SUPER AWESOME VIDEO HERE</h3>
@@ -218,7 +218,7 @@
             </div>
             <div class="about-contain">
                 <div class="overlay"></div>
-                <img src="/img/pexels-suzukii-xingfu-698319.jpg" alt="">
+                <img src="img/pexels-suzukii-xingfu-698319.jpg" alt="">
 
                 <div class="stats">
                     <div class="stat-box">
@@ -249,7 +249,7 @@
                     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit,
                         eget tincidunt.</p>
                     <div class="test-contain">
-                        <img src="/img/image-sad-anime-boy-aniyuki.com-6-edit.jpg" alt="">
+                        <img src="img/image-sad-anime-boy-aniyuki.com-6-edit.jpg" alt="">
                         <div class="test-review">
                             <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet
                                 elit,
@@ -258,7 +258,7 @@
                         </div>
                     </div>
                     <div class="test-contain">
-                        <img src="/img/woman-portrait-park-anime-manga-style_691560-1170.webp" alt="">
+                        <img src="img/woman-portrait-park-anime-manga-style_691560-1170.webp" alt="">
                         <div class="test-review">
                             <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet
                                 elit,
