--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header>
             <div class="container">
                 <a href="#Home" class="logo">
-                    <img src="img/png_20230101_013331_0000-removebg-preview.png" alt="Logo">
+                    <div class="T1"></div>
                 </a>
                 <nav>
                     <i class="fa-solid fa-bars"></i>
